# FlightControlTechlo

./: .gitignore  CMakeLists.txt  PROJECT_STATUS.md  README_FlightGear.md  README_Windows.md  build_flightgear.bat  build_flightgear.sh  clean_protocol.xml  debug_flightgear.ps1  debug_simple.cpp  find_accelerations.cpp  fix_xml.sh  flightgear_interface.cpp  imu_protocol.xml  input_protocol.xml  output_protocol.xml  output_protocol_fixed.xml  quick_fix_parser.cpp  restart_flightgear.bat  simple_output.xml  simple_protocol.xml  simple_text.xml  test_protocol.xml  test_udp_receive.cpp  working_protocol.xml
dRehm_Flight/: AdaptiveFlightController.ino  README.md
dRehm_Flight/dRehmFlight_Teensy_BETA_1.3/: dRehmFlight_Teensy_BETA_1.3.ino
src/control/: AdaptivePID.cpp  AdaptivePID.h
src/core/: FlightController.cpp  FlightController.h  FlightGearHAL.cpp  FlightGearHAL.h  HAL.h  TeensyHAL.cpp  TeensyHAL.h  Types.h
src/estimation/: StateEstimator.cpp  StateEstimator.h
src/mixing/: FixedWingMixer.cpp  FixedWingMixer.h
test/: CMakeLists.txt
test/integration/: test_flight_controller.cpp
test/mocks/: MockHAL.h
test/unit/: test_adaptive_pid.cpp  test_mixer.cpp  test_state_estimator.cpp
